# evolutionary-abstraction-network

./: COLAB_QUICKSTART.md  README.md  colab_run_cifar_chunk.py  colab_run_vision_ean.py  colab_train_ean.ipynb  demo_train.py  gpu_demo_train.py  pyproject.toml  requirements.txt  requirements_language.txt  run_vision_ean_80gb.py
.github/workflows/: tests.yml
configs/: base.yaml
ean/: __init__.py  image_model.py  model.py
ean/abstraction/: abstraction_field.py
ean/concepts/: aggregator.py  concept_module.py  concept_population.py  router.py
ean/encoders/: cnn_encoder.py  simple_encoder.py
ean/evolution/: controller.py  fitness.py
ean/losses/: ean_loss.py
ean/memory/: episodic_memory.py
ean/world_model/: latent_predictor.py
experiments/: language_ean_wikitext2_train.py  qwen_style_ean_chat_adaptive_vocab.py  qwen_style_ean_chat_adaptive_vocab_v2.py  qwen_style_ean_chat_adaptive_vocab_v3.py  qwen_style_ean_chat_pipeline.py  qwen_style_ean_chat_sft_v4.py  qwen_style_ean_chat_sft_v5.py  sentence_language_ean_wikitext2_train.py  sentence_word_ean_wikitext2_train.py  split_cifar100_chunk_train.py  unsloth_qwen4b_chat_sft.py  vision_ean_80gb_1epoch_train_infer.py  vision_ean_infer_wilds.py  wilds_full_benchmark_train.py  wilds_image_benchmark_train.py
tests/: test_ean_core.py
